--- a/lib/dircaster/rss.erb
+++ b/lib/dircaster/rss.erb
@@ -17,7 +17,7 @@
 <generator>https://github.com/miyagawa/dircaster</generator>
 <% vars[:files].each do |file| %>
 <item>
-<title><%=h file.title %></titke>
+<title><%=h file.title %></title>
 <link><%=h file.url %></link>
 <description><%=h file.name %></description>
 <itunes:author><%=h file.artist %></itunes:author>
