use mp3 comment tag for description

--- a/lib/dircaster/rss.erb
+++ b/lib/dircaster/rss.erb
@@ -19,7 +19,7 @@
 <item>
 <title><%=h file.title %></title>
 <link><%=h file.url %></link>
-<description><%=h file.name %></description>
+<description><%=h file.description %></description>
 <itunes:author><%=h file.artist %></itunes:author>
 <author><%=h file.artist %></author>
 <guid><%= file.url %></guid>
