--- a/lib/dircaster/rss.erb
+++ b/lib/dircaster/rss.erb
@@ -15,6 +15,7 @@
 <language>ja</language>
 <lastBuildDate><%=h vars[:now].rfc2822 %></lastBuildDate>
 <generator>https://github.com/miyagawa/dircaster</generator>
+<itunes:block>Yes</itunes:block>
 <% vars[:files].each do |file| %>
 <item>
 <title><%=h file.title %></title>
